# skia-viewer-imgui

./: .gitignore  .gitmodules  APPBUILD.gn  CMakeLists.txt  README.md  build.sh  deps.sh
cmake/: ios.cmake  macos.cmake  win32.cmake
src/: HelloWorld.h  debug.hpp  fullapp.cpp  fullapp.h  main.cpp
src/app/: App.cpp  App.hpp  AppFactory.hpp
src/app/metal/: AppMetal.hpp  AppMetal.mm
src/app/opengl/: AppOpenGL.cpp  AppOpenGL.hpp
test/: .ninja_log  args.gn  build.ninja  fullapp  toolchain.ninja
test/gcc_like_host/: sksl-minify  toolchain.ninja
